[package]
name = "Foprak"
version = "0.1.0"
authors = ["fling"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version= "1.0", features= ["derive"]}
#serde = "1.0.104"
#serde_derive = "1.0.104"
#serde_json = "1.0.44"
bincode = "1.2.1"
